logrotate (3.12.3-1) UNRELEASED; urgency=medium

  * New upstream version 3.12.3

  * debian/gbp.conf: add gbp configuration
  * refresh patches, drop upstream applied ones

 -- Christian Göttsche <cgzones@googlemail.com>  Sat, 02 Sep 2017 20:35:45 +0200

logrotate (3.11.0-0.1) unstable; urgency=low

  * Non-maintainer upload
  * New upstream version 3.11.0  Closes: #734688
  * Refresh patch queue, and fix several regressions
  * Update watch file. Closes: #844578, also Homepage information
  * Specify bsd-mailx as default mailx provider. Closes: #849743

 -- Christoph Biedl <debian.axhn@manchmal.in-ulm.de>  Sat, 07 Jan 2017 19:54:50 +0100

logrotate (3.8.7-2) unstable; urgency=low

  * New patch:
    - taboo-716649.patch: Add .dpkg-bak and .dpkg-del to taboo extensions.
      (Closes: #716649)
  * Bump standards version to 3.9.6. (No changes needed.)

 -- Paul Martin <pm@debian.org>  Tue, 05 May 2015 23:18:48 +0100

logrotate (3.8.7-1) unstable; urgency=low

  * New patch:
    - man-su-explanation-729315.patch: Explain how "su" may conflict with
      "create". (Closes: #729315)
  * New upstream release
    - Fix to forcing size-based rotations. (Closes: #714910)
  * Bump standards version to 3.9.5. (No changes needed.)

 -- Paul Martin <pm@debian.org>  Fri, 17 Jan 2014 09:46:01 +0000

logrotate (3.8.6-1) unstable; urgency=low

  * New upstream release
    - logrotate crashes with sharedscripts when no logs are rotated.
    - Fix potential buffer overflow in parsing config.
  * New patch:
    - mktime-718332.patch: Fix incorrectly initialized struct tm causing
      extra rotations. (Closes: #718332)

 -- Paul Martin <pm@debian.org>  Tue, 03 Sep 2013 21:34:00 +0100

logrotate (3.8.5-1) unstable; urgency=low

  * New upstream release
    + Check for both possible orders of script output in tests.
      (Closes: #707526)
    + If logrotate state file is corrupted, fail with error.
    + Make logrotate state file creation atomic. (Closes: #707526)