@@ -1,38 +1,37 @@
-This package was originally debianized by Joseph Carter
-<knghtbrd@debian.org> on Thu, 22 Apr 1999 15:33:04 -0700.
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: logrotate
+Upstream-Contact: https://github.com/logrotate/logrotate/issues
+Source: https://github.com/logrotate/logrotate
 
-This version was downloaded from RedHat's server at:
+Files: *
+Copyright: 1999-2017 Erik Troan, Preston Brown, Elliot Lee, Miloslav Trmac,
+                     Dan Walsh, Peter Vrabec, Jesse Keating, Tomas Smetana
+                     and Kamil Dudka
+License: GPL-2
 
- https://fedorahosted.org/releases/l/o/logrotate/
+Files: debian/*
+Copyright: 1999 Joseph Carter
+           ?-2017 Paul Martin <pm@debian.org>
+License: GPL-2
 
-Upstream's website for the source is:
-
- https://fedorahosted.org/logrotate/
-
-
-Upstream Authors are various RedHat people, including Erik Troan, 
-Preston Brown, Elliot Lee, Miloslav Trmac, Dan Walsh, Peter Vrabec, 
-Jesse Keating and Tomas Smetana.
-
-Copyright: GNU GENERAL PUBLIC LICENSE (GPL) Version 2
-
-All modifications to the packaging and patches by Paul Martin 
-<pm@debian.org> are also made available under the GPL:
-
-    Copyright (C) 2001-2011  Paul Martin
-
-    This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program; if not, write to the Free Software
-    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-
-On a Debian system, the GPLv2 can be found in /usr/share/common-licenses/GPL-2
+License: GPL-2
+ This program is free software; you can redistribute it
+ and/or modify it under the terms of the GNU General Public
+ License as published by the Free Software Foundation; either
+ version 2 of the License, or (at your option) any later
+ version.
+ .
+ This program is distributed in the hope that it will be
+ useful, but WITHOUT ANY WARRANTY; without even the implied
+ warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+ PURPOSE.  See the GNU General Public License for more
+ details.
+ .
+ You should have received a copy of the GNU General Public
+ License along with this package; if not, write to the Free
+ Software Foundation, Inc., 51 Franklin St, Fifth Floor,
+ Boston, MA  02110-1301 USA
+ .
+ On Debian systems, the full text of the GNU General Public
+ License version 2 can be found in the file
+ `/usr/share/common-licenses/GPL-2'.
