@@ -1,5 +1,5 @@
 #!/bin/sh
-set -e
+set -eu
 if [ "$1" = "purge" ]; then
   rm -rf /var/lib/logrotate
 fi
