@@ -1,5 +1,5 @@
 #!/bin/sh
-set -e
+set -eu
 if [ "$1" = "upgrade" ]; then
 
   # Fix up the location of the state files that previous versions used.
