@@ -1,2 +1,0 @@
-# lintian doesn't seem to know about kfreebsd-amd64 yet.
-logrotate source: invalid-arch-string-in-source-relation kfreebsd-amd64 [build-depends: libselinux1-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64]]
